--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,73 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
+.a-menu {
+  display: inline-block;
+  text-align: center !important;
+  padding: 20px;
+  width: 100%;
+  background-color: #FF415A;
+  margin: 0; }
+
+.a-menu__item {
+  display: inline-block;
+  font-size: 17px;
+  font-weight: 500;
+  padding-right: 30px;
+  color: white; }
+
+.a-menu__item__btn {
+  display: inline-block;
+  font-size: 17px;
+  font-weight: 500;
+  color: white;
+  background: #074B6D;
+  border: none;
+  border-radius: 50px;
+  padding-right: 5px;
+  padding-left: 5px;
+  padding: 5px; }
+
+img {
+  width: 250px;
+  display: inline-block;
+  margin-top: 5px; }
+
+.a-menu__item__link {
+  color: #fff; }
+  .a-menu__item__linkhover {
+    color: #A6A6A6;
+    text-decoration: none;
+    padding: 20px; }
+
+#portaf {
+  background: #074B6D;
+  padding: 120px;
+  padding-top: 60px; }
+
+.porta__btn {
+  display: inline-block;
+  font-size: 17px;
+  font-weight: 500;
+  color: white;
+  background: #0DCF92;
+  border: none;
+  border-radius: 50px;
+  padding: 2px;
+  padding-right: 40px;
+  padding-left: 40px; }
+
+.perfil h4 {
+  color: #0DCF92; }
+.perfil h6 {
+  color: #fff;
+  font-size: 20px; }
+.perfil p {
+  color: #fff;
+  line-height: 25px;
+  font-size: 16px; }
+
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Roboto', sans-serif; }
+  font-family: 'Open Sans',sans-serif; }
 
 /*# sourceMappingURL=main.css.map */
