--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 @import '_variables.scss';
 @import '_style.scss';
 @import '_base.scss'
