--- a/css/main.css
+++ b/css/main.css
@@ -19,12 +19,15 @@
   font-size: 17px;
   font-weight: 500;
   color: white;
-  background: #074B6D;
+  background: #0B455A;
   border: none;
   border-radius: 50px;
   padding-right: 5px;
   padding-left: 5px;
   padding: 5px; }
+
+button.a-menu__item__btn {
+  margin-right: 30px; }
 
 img {
   width: 250px;
@@ -39,7 +42,7 @@ img {
     padding: 20px; }
 
 #portaf {
-  background: #074B6D;
+  background: #0B455A;
   padding: 120px;
   padding-top: 60px; }
 
