--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -27,6 +27,10 @@
 	padding-left: 5px;
 	padding: 5px;
 }
+
+button.a-menu__item__btn{
+	margin-right: 30px;
+}
 img{
 	width: 250px;
 	display: inline-block;
