--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,12 @@ img {
   line-height: 25px;
   font-size: 16px; }
 
+img.redes-sociales {
+  width: 60px;
+  margin: 10px;
+  padding-top: 50px;
+  margin-right: 30px; }
+
 body {
   padding: 0;
   margin: 0;
