--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -80,3 +80,11 @@ img{
 		font-size: 16px;
 	}
 }
+
+ img.redes-sociales {
+	width: 60px;
+	margin: 10px;
+	padding-top: 50px;
+	margin-right: 30px;
+
+}
